@@ -3,6 +3,8 @@ Revision history for Bit-Manip
 1.00 UNREL
         - removed string.h include as we don't use it
         - LSB can now be equal to MSB to allow getting a single bit
+        - fix issue where bit_set() was not updating bits if a leading zero was
+          sent in. We now require a 'bits' param (fixes #1)
 
 0.02    2017-01-25
         - added in EXPORT_OK POD section
